# GraphicsSandbox

./: CMakeLists.txt
cmake/: CompilerOptions.cmake  CompilerWarnings.cmake  Sanitizers.cmake
docs/: Roadmap.md
include/: Constants.h
include/GraphicsCore/: Application.h  Color.h  Enums.h  GLContext.h  Renderer.h  SDLSystem.h  Window.h
include/GraphicsCore/detail/: GLContextAccess.h  WindowAccess.h
include/utilities/: BitwiseOperations.h  Logger.h
src/: Application.cpp  GLContext.cpp  GLContextAccess.cpp  GraphicsSandbox.cpp  Logger.cpp  Renderer.cpp  SDLSystem.cpp  Window.cpp  WindowAccess.cpp
src/include/GraphicsCore/: Application.cpp
